<resources>
    <string name="app_name">Live State</string>
    <string name="this_is_item_sample">Ceci est un exemple d’élément !</string>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="There_is_no_email">Aucun client email installé.</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to work properly</string>
    <string name="continue_permission">Continue</string>
    <string name="allow_camera_access">Allow access</string>
    <string name="permission">Permission</string>
    <string name="allow_storage_access">Allow storage access</string>
    <string name="oh_we_re_sorry">Oh, We’re sorry...</string>
    <string name="much_appreciated">Much appreciated!</string>
    <string name="your_feedback_is_welcome">Your feedback is welcome.</string>
    <string name="your_support_is_our_biggest_motivation">Your support is our biggest motivation!</string>
    <string name="title_intro_1">Supernatural Discovery Camera</string>
    <string name="content_1">Inside your camera can be a whole other world. Explore it today!</string>
    <string name="title_intro_2">Terrifying Ghost Sounds</string>
    <string name="content_2">Ghostly whispers and unseen footsteps — prepare to be terrified.</string>
    <string name="title_intro_3">Chilling Ghost Stories</string>
    <string name="content_3">Haunted rooms, whispering spirits, and terrors in the dark.</string>
    <string name="title_intro_4">Embrace the Unknown</string>
    <string name="content_4">With the Holy Cross as your compass, the spiritual world opens before you.</string>
    <string name="language">Language</string>
    <string name="close">close</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="policy">Policy</string>
    <string name="sound">Sound</string>
    <string name="may_be_later">May be later</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="setting">Settings</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="earth_3d">Earth 3D</string>
    <string name="camera_live">Camera Live</string>
    <string name="watch_live">Watch Live</string>
    <string name="famous_place">Famous Place</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="route_map">Route Map</string>
    <string name="traffic">Traffic Alert</string>
    <string name="my_location">My Location</string>
    <string name="location">Location</string>
    <string name="weather">Weather</string>
    <string name="world_clock">World Clock</string>
    <string name="speedometer">Speedometer</string>
    <string name="compass">Compass</string>
    <string name="converter">Converter</string>
    <string name="enter_district_city_or_country">Enter district, city, or country</string>
    <string name="enter_hotel_hospital">Enter Hotel, Hospital, or Police...</string>
    <string name="copy">Copy</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="coped">Copied Location:</string>
    <string name="share_location">Share My Location</string>
    <string name="share_with">Share with</string>
    <string name="turn_on_gps">Turn on GPS, please!</string>

    <string name="wind">wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="visibility">Visibility</string>
    <string name="next_5_days">Next 5 days</string>
    <string name="wind_gusts">Wind Gusts</string>
    <string name="search_location">Search location</string>
    <string name="grant_location_permission_to_view_details">You need to grant location permission to view details</string>
    <string name="update">update:</string>
    <string name="search">Search</string>
    <string name="please_enter_a_valid_number">Please enter a valid number</string>
    <string name="select_currency">Select Currency</string>
    <string name="up_loc">up loc</string>
    <string name="gps_on">GPS is on</string>
    <string name="on">ON</string>
    <string name="gps_off">Please turn on GPS</string>
    <string name="location_service_disabled">Enable Location Services</string>
    <string name="location_services_are_currently_off_Please_enable_them_to_continue">Location services are currently off. Please enable them to continue.</string>
    <string name="FlashlightOff">Flashlight Turned Off</string>
    <string name="FlashlightOn">Flashlight Turned On</string>
    <string name="camera_compass">Camera Compass</string>
    <string name="angle">Angle</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="true_heading">True Heading</string>
    <string name="axis">Axis</string>
    <string name="location_not_available">Location not available</string>
    <string name="camera_permission_required">Camera permission is required to continue</string>
    <string name="grant_both_camera_location">You need to grant both Camera and Location permissions to continue</string>

    <string name="durections">Durections</string>
    <string name="call">Call</string>
    <string name="not_found">Not found</string>
    <string name="your_favorite_is_empty">Your favorite is empty</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_open">Opening hours not available</string>
    <string name="dont_have_number_phone">This address don`t have number phone</string>
    <string name="unable_to_determine_the_starting">Unable to determine the starting location.</string>
    <string name="route_not_found">Route not found.</string>
    <string name="destination_not_found">Destination not found.</string>
    <string name="fast">Fast</string>
    <string name="slow">Slow</string>
    <string name="near_you">Near you</string>
    <string name="hot_search">Hot search</string>
    <string name="watch_other">Watch other</string>
    <string name="watch">Watch</string>

    <string name="address_not_found">Address not found</string>
    <string name="error_fetching_address">Error fetching address</string>
    <string name="odometer">Odometer</string>
    <string name="avg_speed">AVG Speed</string>
    <string name="max_speed">Max Speed</string>
    <string name="stop">Stop</string>
    <string name="loading">Loading</string>
    <string name="address_location">138.8829042, -177.0163517</string>
    <string name="point_start">Point start</string>
    <string name="point_end">Point End</string>

</resources>