<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4FAFF"
    tools:context=".ui.camera_live.CameraLiveActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="14dp"
        android:padding="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_live"
        app:layout_constraintTop_toTopOf="@+id/imgBack"
        app:layout_constraintBottom_toBottomOf="@+id/imgBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:textColor="@color/cl_text_464646"
        android:fontFamily="@font/opensans_700"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_earth_2d"
        android:layout_marginEnd="14dp"
        app:layout_constraintTop_toTopOf="@+id/imgBack"
        app:layout_constraintBottom_toBottomOf="@+id/imgBack"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/llSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imgBack"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_text_show"
        android:backgroundTint="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSearch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_1"
            app:tint="#545F79"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_district_city_or_country"
            android:textColor="@color/text_item"
            android:textColorHint="#545F79"
            android:textSize="14sp"
            android:fontFamily="@font/opensans_600"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:paddingEnd="16dp"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnNearYou"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/llSearch"
        app:layout_constraintEnd_toStartOf="@+id/btnHotSearch"
        app:layout_constraintTop_toTopOf="@+id/btnHotSearch"
        app:layout_constraintBottom_toBottomOf="@+id/btnHotSearch"
        android:background="@drawable/bg_camera_btn_select"
        android:paddingVertical="6dp"
        android:paddingHorizontal="28dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginEnd="6dp"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_700"
        android:text="@string/near_you"
        android:drawableStart="@drawable/ic_location_3"/>

    <TextView
        android:id="@+id/btnHotSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llSearch"
        app:layout_constraintStart_toEndOf="@+id/btnNearYou"
        app:layout_constraintEnd_toEndOf="@+id/llSearch"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_camera_btn"
        android:paddingVertical="6dp"
        android:paddingHorizontal="28dp"
        android:layout_marginStart="6dp"
        android:drawablePadding="10dp"
        android:textSize="14sp"
        android:textColor="#457CBB"
        android:fontFamily="@font/opensans_700"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/hot_search"
        android:drawableStart="@drawable/ic_hot_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvCameraLive"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnHotSearch"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/tvNotFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieNotFound"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            app:lottie_rawRes="@raw/anima_not_found"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found"
            android:textSize="18sp"
            android:textColor="@color/cl_text_464646"
            android:fontFamily="@font/opensans_700"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>