<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_connection"
    android:paddingTop="25dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/bevietnampro_700"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:paddingHorizontal="16dp"
                android:text="@string/permission"
                android:textColor="@color/main"
                android:textSize="@dimen/_20ssp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_132sdp"
                android:layout_height="@dimen/_132sdp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_key_permission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_item_language_unselect"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp">


                    <ImageView
                        android:id="@+id/iv_set_camera_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_switch_not_select" />

                    <ImageView
                        android:id="@+id/iv_select_camera_permission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_switch_select"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/main"
                        android:fontFamily="@font/bevietnampro_400"
                        android:includeFontPadding="false"
                        android:layout_toStartOf="@id/iv_set_camera_permission"
                        android:text="@string/allow_camera_access"
                        android:textSize="18sp" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:fontFamily="@font/bevietnampro_400"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/this_app_needs_permissions_below_to_work_properly"
                android:textColor="@color/main"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/tvContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@drawable/bg_btn_next"
                android:fontFamily="@font/bevietnampro_700"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/continue_permission"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>